kubernetes/spring-boot-demo/spring-boot-demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-demo-service
  namespace: demo
  labels:
    app: spring-boot-demo
spec:
  selector:
    app: spring-boot-demo
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8090
      name: http
  type: NodePort
