kubernetes/spring-boot-demo/spring-boot-demo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-boot-demo-ingress
  namespace: demo
spec:
  rules:
    - host: spring-boot-demo.k3s.gpg123.vip
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-boot-demo-service
                port:
                  name: http
