kubernetes/spring-boot-demo/spring-boot-demo-vsvc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spring-boot-demo-vsvc
  namespace: demo
  labels:
    app: spring-boot-demo
spec:
  hosts:
    - k8s-istio.gpg123.vip
  http:
    - match:
#        - headers:
#            end-user:
#              exact: jason
        - uri:
            prefix: /demo
      route:
        - destination:
            host: k8s-istio.gpg123.vip
